<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreditCardActivity">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip" >
            <TextView
                android:id="@+id/card_data_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_data_title"/>
         </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip" >
            <TextView
                android:id="@+id/card_name_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_name"/>
            <EditText
                android:id="@+id/card_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip" >
            <TextView
                android:id="@+id/card_number_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_number"/>
            <EditText
                android:id="@+id/card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip" >
            <TextView
                android:id="@+id/card_cvv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_cvv"/>
            <EditText
                android:id="@+id/card_cvv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip" >
            <TextView
                android:id="@+id/card_exp_month_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exp_month"/>
            <EditText
                android:id="@+id/card_exp_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip" >

            <TextView
                android:id="@+id/card_exp_year_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exp_year"/>

            <EditText
                android:id="@+id/card_exp_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip" >
            <TextView
                android:id="@+id/billing_address_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/billing_address"/>
         </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip" >
            <TextView
                android:id="@+id/street1_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/street1"/>
            <EditText
                android:id="@+id/street1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip" >
            <TextView
                android:id="@+id/card_city_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city"/>
            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip" >
            <TextView
                android:id="@+id/card_state_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/state"/>
            <EditText
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip" >
            <TextView
                android:id="@+id/card_postal_code_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/postal_code"/>
            <EditText
                android:id="@+id/postal_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip" >
            <TextView
                android:id="@+id/card_country_code_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country_code"/>
            <EditText
                android:id="@+id/country_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/layout_add_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tableLayout1">

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_pop1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/layout_add_cancel">
    <Button
        android:id="@+id/btn_populate_visa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/populate_visa"
        />

    <Button
        android:id="@+id/btn_populate_mastercard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/populate_mastercard"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/layout_pop1">
        <Button
            android:id="@+id/btn_populate_amex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/populate_amex"
            />
        <Button
            android:id="@+id/btn_populate_discover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/populate_discover"
            />

    </LinearLayout>

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/progress"
        android:layout_width="48dp"
        android:layout_height="48dp"
        style="?android:attr/progressBarStyleSmall"
        android:indeterminate="true"
        android:visibility="invisible"
        android:layout_centerInParent="true"/>

</RelativeLayout>
