<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DeviceActivity">

    <TextView
        android:id="@+id/device_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_name"/>

    <TextView
        android:id="@+id/device_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_id"
        android:layout_below="@id/device_name"/>


    <Button
        android:id="@+id/btn_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:layout_below="@id/device_id"/>

    <Button
        android:id="@+id/btn_commits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_commits"
        android:layout_below="@id/btn_user"/>

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/progress"
        android:layout_width="48dp"
        android:layout_height="48dp"
        style="?android:attr/progressBarStyleSmall"
        android:indeterminate="true"
        android:visibility="gone"
        android:layout_centerInParent="true"/>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btn_commits"/>

</RelativeLayout>
