<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_username_title"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/user_name"/>

    <TextView
        android:id="@+id/tv_username_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_username_title"/>

    <TextView
        android:id="@+id/tv_user_email_title"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@id/tv_username_title"/>

    <TextView
        android:id="@+id/tv_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_user_email_title"
        android:layout_below="@id/tv_username_title"/>

    <TextView
        android:id="@+id/tv_userdata_title"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/user_id"
        android:layout_below="@id/tv_user_email_title"/>

    <TextView
        android:id="@+id/tv_userdata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_userdata_title"
        android:layout_below="@id/tv_user_email_title"/>


    <Button
        android:id="@+id/btn_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devices"
        android:layout_below="@id/tv_userdata_title"
        android:visibility="visible"/>

    <Button
        android:id="@+id/btn_credit_cards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit_cards"
        android:layout_below="@id/btn_devices"
        android:visibility="visible"/>

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/progress"
        android:layout_width="48dp"
        android:layout_height="48dp"
        style="?android:attr/progressBarStyleSmall"
        android:layout_below="@id/btn_credit_cards"
        android:indeterminate="true"
        android:visibility="gone"
        android:layout_centerInParent="true"/>

</RelativeLayout>
